--- a/server-api/package.json
+++ b/server-api/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "json-server --watch db.json --port $PORT"
+    "postinstall": "chmod +x ./node_modules/.bin/json-server",
+    "start": "npx json-server --watch db.json --port $PORT"
   },
   "keywords": [],
   "author": "",
